--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/effects": "^8.6.0",
     "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^8.6.0",
     "bootstrap": "^3.4.1",
     "firebase": "^7.9.3",
     "rxjs": "~6.4.0",
