--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/platform-server": "^9.0.5",
     "@angular/router": "~8.2.14",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
+    "@types/jest": "^25.1.4",
     "bootstrap": "^3.4.1",
     "firebase": "^7.9.3",
     "rxjs": "~6.4.0",
+    "ts-loader": "^6.2.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
