--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/platform-server": "^9.0.5",
+    "@angular/platform-server": "^9.0.6",
     "@angular/router": "~8.2.14",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/router-store": "^8.6.0",
@@ -28,9 +28,9 @@
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "@types/jest": "^25.1.4",
     "bootstrap": "^3.4.1",
+    "express": "^4.17.1",
     "firebase": "^7.9.3",
     "rxjs": "~6.4.0",
-    "ts-loader": "^6.2.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -39,9 +39,9 @@
     "@angular/cli": "~8.3.25",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -51,8 +51,10 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
+    "ts-loader": "^6.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "webpack-cli": "^3.3.11"
   }
 }
