--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
-    "serve:ssr": "node dist/server.js",
-    "build:client-and-server-bundles": "ng build --prod && ng run learn-app:server",
-    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
+    "build:ssr": "ng build --prod --base-href https://uladzimir-yeudakimovich.github.io/learn-app/ && ng run learn-app:server:production",
+    "serve:ssr": "node dist/learn-app/server/main.js",
+    "dev:ssr": "ng run learn-app:serve-ssr",
+    "prerender": "ng run learn-app:prerender"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/platform-server": "^9.0.7",
     "@angular/router": "~9.0.7",
+    "@grpc/proto-loader": "^0.5.3",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
@@ -44,13 +45,15 @@
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
+    "@nguniversal/builders": "^9.0.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
