--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:ssr": "ng build --prod --base-href https://uladzimir-yeudakimovich.github.io/learn-app/ && ng run learn-app:server:production",
+    "build:ssr": "ng build --prod ng run learn-app:server:production",
     "serve:ssr": "node dist/learn-app/server/main.js",
     "dev:ssr": "ng run learn-app:serve-ssr",
     "prerender": "ng run learn-app:prerender"
@@ -20,12 +20,10 @@
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
     "@angular/forms": "~9.0.7",
-    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/platform-server": "^9.0.7",
     "@angular/router": "~9.0.7",
-    "@grpc/proto-loader": "^0.5.3",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
@@ -62,7 +60,6 @@
     "ts-loader": "^6.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.7.5",
-    "webpack-cli": "^3.3.11"
+    "typescript": "~3.7.5"
   }
 }
