--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,4 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -61,6 +60,17 @@
                   "maximumError": "10kb"
                 }
               ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "learn-app:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "learn-app:build:production"
             }
           }
         },
@@ -143,7 +153,11 @@
           "options": {
             "outputPath": "dist/learn-app/server",
             "main": "server.ts",
-            "tsConfig": "tsconfig.server.json"
+            "tsConfig": "tsconfig.server.json",
+            "externalDependencies": [
+              "grpc",
+              "@grpc/proto-loader"
+            ]
           },
           "configurations": {
             "production": {
